--- a/demo/css/main.css
+++ b/demo/css/main.css
@@ -1,43 +1,507 @@
+@charset "UTF-8";
+/*--------------------------------------------------------------
+Imports
+--------------------------------------------------------------*/
+/*--------------------------------------------------------------
+Colors
+--------------------------------------------------------------*/
+/*--------------------------------------------------------------
+Breakpoints
+--------------------------------------------------------------*/
+/*--------------------------------------------------------------
+Icons
+--------------------------------------------------------------*/
+/*--------------------------------------------------------------
+Media query helpers
+--------------------------------------------------------------*/
+/*--------------------------------------------------------------
+Hide text
+--------------------------------------------------------------*/
+/*--------------------------------------------------------------
+Normalized button
+--------------------------------------------------------------*/
+/*--------------------------------------------------------------
+(un)truncate text helper
+--------------------------------------------------------------*/
+/*--------------------------------------------------------------
+Hover and focus shortcut
+--------------------------------------------------------------*/
+/*--------------------------------------------------------------
+Icon font helpers
+--------------------------------------------------------------*/
+/*--------------------------------------------------------------
+Reset / normalize additions and helpers
+--------------------------------------------------------------*/
+a {
+  text-decoration: none;
+  cursor: pointer;
+  color: inherit;
+}
+
+a:focus,
+a::-moz-focus-inner {
+  border: 0;
+  outline: none;
+}
+
+ol, ul, li, fieldset, h1, h2, h3, h4, p, dl, dt, dd {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  border: 0;
+  font-size: 1em;
+}
+
+img {
+  font-style: italic;
+  vertical-align: bottom;
+}
+
+button,
+input,
+select,
+textarea {
+  font-family: inherit;
+  font-size: 100%;
+  margin: 0;
+  outline: none;
+  box-sizing: border-box;
+  border-radius: 0;
+}
+
+label {
+  cursor: pointer;
+}
+
+em {
+  font-style: normal;
+}
+
+figure {
+  margin: 0;
+}
+
+textarea {
+  overflow: auto;
+  vertical-align: top;
+  resize: vertical;
+}
+
+@font-face {
+  font-family: "githubPagesAttire";
+  src: url("icons/fonts/attireIcons.eot?v1.0");
+  src: url("icons/fonts/attireIcons.eot?v1.0#iefix") format("embedded-opentype"), url("icons/fonts/attireIcons.woff?v1.0") format("woff"), url("icons/fonts/attireIcons.ttf?v1.0") format("truetype"), url("icons/fonts/attireIcons.svg?v1.0icons/fonts/attireIcons") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+[class^="icon"],
+[class*=" icon"] {
+  display: inline-block;
+  position: relative;
+  padding-left: 40px;
+}
+
+[class^="icon"]:before,
+[class*=" icon"]:before {
+  font-family: "githubPagesAttire";
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  position: absolute;
+  left: 0;
+  top: 50%;
+  text-align: center;
+  text-indent: 0;
+  margin: 0;
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  margin-top: -20px;
+}
+
+.iconMenu:before {
+  content: "";
+}
+
+.iconArrowRight:before {
+  content: "";
+}
+
+.iconMail:before {
+  content: "";
+}
+
+.iconFacebook:before {
+  content: "";
+}
+
+.iconGithub:before {
+  content: "";
+}
+
+.iconTwitter:before {
+  content: "";
+}
+
+.iconCode:before {
+  content: "";
+}
+
+/*--------------------------------------------------------------
+Styles
+--------------------------------------------------------------*/
 html,
 body {
   min-height: 100%;
 }
 
+a {
+  color: #2B91F5;
+}
+
 html {
   font-size: 62.5%;
-  background: #f2f2f2;
+  background: #fff;
 }
 
 body {
+  font-family: Lato, Arial, sans-serif;
+  font-weight: 400;
+  font-style: normal;
   font-size: 1em;
   min-width: 32em;
   position: relative;
+  color: #303030;
 }
 
-.mainWrap {
-  margin: 2em auto;
-  max-width: 70em;
-  padding: 2em;
-  min-height: 90em;
+.attireBlock {
   background-color: #fff;
-  border-radius: 0.3em;
-  box-shadow: 0 0.2em 0.3em rgba(0, 0, 0, 0.1);
+  position: relative;
+  border-top: 1px solid #e3e3e3;
+}
+.attireBlock > .inner {
+  padding: 2em;
+}
+.attireBlock.mod1 {
+  background-color: #FBFBFB;
+}
+@media screen and (min-width: 45.0625em) {
+  .attireBlock > .inner {
+    max-width: 70em;
+    padding: 6em 2.5em;
+    margin: 0 auto;
+  }
 }
 
-.titleType1 {
-  font-size: 2.6em;
+.attireMainNav {
+  position: relative;
+  background-color: #fff;
+}
+.attireMainNav > .toggleBtn {
+  margin: 0;
   padding: 0;
-  margin: 0 0 0.76923em;
+  border: 0;
+  cursor: pointer;
+  background: none;
+  text-indent: -9999em;
+  overflow: hidden;
+  padding: 0;
+  display: inline-block;
+  width: 60px;
+  height: 60px;
+}
+.attireMainNav > .toggleBtn::-moz-focus-inner {
+  padding: 0;
+  border: 0;
+}
+.attireMainNav > .toggleBtn:before {
+  left: 50%;
+  margin-left: -30px;
+}
+.attireMainNav > .toggleBtn:before {
+  font-size: 2.6em;
+  width: 2.30769em;
+}
+.attireMainNav > ul {
+  padding: 0 0 1em;
+  display: none;
+}
+.attireMainNav.isActive > ul {
+  display: block;
+}
+.attireMainNav a {
+  font-size: 1.4em;
+  display: block;
+  padding: 1.07143em 1.42857em;
+  color: #636363;
+  letter-spacing: 0.07em;
+  text-transform: uppercase;
+}
+.attireMainNav a:hover {
+  color: #2B91F5;
+}
+@media screen and (min-width: 45.0625em) {
+  .attireMainNav > .toggleBtn {
+    display: none;
+  }
+  .attireMainNav > ul {
+    display: block;
+    overflow: hidden;
+    padding: 0 1.5em;
+  }
+  .attireMainNav li {
+    float: left;
+  }
+  .attireMainNav a {
+    font-size: 1.4em;
+    display: block;
+    padding: 1.42857em 1.07143em;
+  }
 }
 
-.panel {
-  padding: 2.5em 0;
+.attireTitleType1 {
+  font-family: Lato, Arial, sans-serif;
+  font-weight: 900;
+  font-style: normal;
+  font-size: 4em;
+  padding: 0;
+  margin: 0;
+}
+@media screen and (min-width: 45.0625em) {
+  .attireTitleType1 {
+    font-size: 6em;
+  }
+}
+
+.attireTitleType2 {
+  font-family: Lato, Arial, sans-serif;
+  font-weight: 900;
+  font-style: normal;
+  font-size: 3.8em;
+  padding: 0;
+  margin: 0 0 0.55556em;
+}
+
+.attireTitleType3 {
+  font-family: Lato, Arial, sans-serif;
+  font-weight: 700;
+  font-style: normal;
+  font-size: 2.2em;
+  padding: 0;
+  margin: 0 0 0.68182em;
+}
+
+.attireSeparator {
+  margin: 2.5em 0;
+  position: relative;
+  border: 0;
+  border-top: 1px solid #e3e3e3;
+}
+.attireSeparator.mod1 {
+  margin: 3.5em 0;
+  width: 10em;
+}
+.attireSeparator.mod2 {
+  margin: 6em 0;
+  width: 10em;
+  border-top: 5px solid #636363;
+}
+
+.attireAuthor {
+  position: relative;
+  margin-bottom: 3em;
+}
+.attireAuthor > .imageElement {
+  display: inline-block;
+  overflow: hidden;
+  vertical-align: middle;
+  width: 4em;
+  height: 4em;
+  position: relative;
+  border-radius: 50%;
+  border-radius: 50%;
+}
+.attireAuthor > .imageElement > img {
+  display: block;
+  width: 100%;
+}
+.attireAuthor > .name {
+  font-family: Lato, Arial, sans-serif;
+  font-weight: 700;
+  font-style: normal;
+  font-size: 1.3em;
+  display: inline-block;
+  vertical-align: middle;
+  position: relative;
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+  padding: 0 1em;
+  background-color: #fff;
+  color: #303030;
+}
+@media screen and (max-width: 45em) {
+  .attireAuthor > .socialBox {
+    position: relative;
+    padding: 1em 0 0;
+    margin-top: 0.5em;
+  }
+  .attireAuthor > .socialBox a {
+    font-size: 1.4em;
+    display: block;
+    padding: 0.57143em 0.35714em 0.57143em 3.92857em;
+    color: #707070;
+  }
+  .attireAuthor > .socialBox a:before {
+    font-size: 1.3em;
+  }
+  .attireAuthor > .socialBox:before {
+    content: "";
+    position: absolute;
+    left: 5.5em;
+    top: 0;
+    right: 0;
+    border-top: 1px solid #e3e3e3;
+  }
+}
+@media screen and (min-width: 45.0625em) {
+  .attireAuthor {
+    margin-bottom: 5em;
+  }
+  .attireAuthor > .imageElement {
+    width: 5em;
+    height: 5em;
+  }
+  .attireAuthor > .socialBox {
+    position: absolute;
+    right: 0;
+    top: 50%;
+    margin-top: -2em;
+    background-color: #fff;
+    padding: 0 2em 0 1em;
+  }
+  .attireAuthor > .socialBox a {
+    text-indent: -9999em;
+    overflow: hidden;
+    padding: 0;
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+  }
+  .attireAuthor > .socialBox a:before {
+    left: 50%;
+    margin-left: -20px;
+  }
+  .attireAuthor > .socialBox a:before {
+    font-size: 2em;
+    color: #636363;
+  }
+  .attireAuthor > .socialBox a:hover:before {
+    color: #2B91F5;
+  }
+  .attireAuthor:before {
+    content: "";
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 50%;
+    border-top: 1px solid #e3e3e3;
+  }
+}
+
+.attirePanelType1 {
+  padding-top: 2.5em;
   border-top: 1px solid #ededed;
+  margin-bottom: 2.5em;
 }
 
-.textType1 {
+.attireTextType1 {
+  font-family: Lato, Arial, sans-serif;
+  font-weight: 300;
+  font-style: normal;
+  font-size: 2.2em;
+  padding: 0;
+  margin: 0.90909em 0 0.90909em;
+  color: #707070;
+  line-height: 1.4;
+}
+@media screen and (min-width: 45.0625em) {
+  .attireTextType1 {
+    font-size: 2.8em;
+    margin: 0.71429em 0 1.07143em;
+  }
+}
+
+.attireTextType2 {
+  font-size: 1.8em;
+  padding: 0;
+  margin: 0 0 1.25em;
+  color: #636363;
+  line-height: 1.6;
+}
+
+.attireTextType3 {
   font-size: 1.6em;
   padding: 0;
   margin: 0 0 1.25em;
-  color: #999;
+  color: #636363;
+  line-height: 1.6;
+}
+
+/*--------------------------------------------------------------
+Code related
+--------------------------------------------------------------*/
+.attireCodeHighlight[class*="language-"] {
+  margin: 2em 0;
+}
+.attireCodeHighlight > code {
+  font-size: 1.4em;
+}
+
+.attireCodeToggleBlock .attireCodeHighlight {
+  display: none;
+}
+.attireCodeToggleBlock.isActive .attireCodeHighlight {
+  display: block;
+}
+
+.attireCodeToggleBtn {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  cursor: pointer;
+  background: none;
+  padding: 0 1.2em 0 0;
+  color: #2B91F5;
+}
+.attireCodeToggleBtn::-moz-focus-inner {
+  padding: 0;
+  border: 0;
+}
+.attireCodeToggleBtn:before {
+  left: auto;
+  right: 0;
+  text-align: right;
+}
+
+/*--------------------------------------------------------------
+Misc
+--------------------------------------------------------------*/
+.githubRibbon {
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 10em;
+}
+.githubRibbon > img {
+  display: block;
+  width: 100%;
+}
+@media screen and (min-width: 45.0625em) {
+  .githubRibbon {
+    width: 14.9em;
+  }
 }
